--- a/LAB02/http_server/lampent/pyproject.toml
+++ b/LAB02/http_server/lampent/pyproject.toml
@@ -1,21 +1,18 @@
 [tool.poetry]
-name = "trumbeak"
+name = "lampent"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = "^0.95.2"
-uvicorn = {extras = ["standard"], version = "^0.22.0"}
-websockets = "^11.0.3"
-starlette = "^0.27.0"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
-aiosqlite = "^0.19.0"
-pydantic = "^1.10.8"
-argon2-cffi = "^21.3.0"
-requests = "^2.31.0"
+python = "^3.10"
+fastapi = "^0.95.0"
+sqlalchemy = "^2.0.8"
+pymysql = "^1.0.3"
+uvicorn = {extras = ["standard"], version = "^0.21.1"}
+itsdangerous = "^2.1.2"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
